improve user information

--- a/crossbar/crossbar/web/templates/cb_web_404.html
+++ b/crossbar/crossbar/web/templates/cb_web_404.html
@@ -18,6 +18,13 @@
    </center>
    <br>
    <br>
+   <p>
+      Your <b>WebSocket Application Endpoint</b> is running here:
+   </p>
+   <center>
+      <pre>{{ wsUri }}</pre>
+   </center>
+   <br>
    <br>
 
 {% endblock %}
