--- a/crossbar/crossbar/web/templates/cb_ws_status.html
+++ b/crossbar/crossbar/web/templates/cb_ws_status.html
@@ -15,6 +15,9 @@
    <p>
       If you are a human, this is likely not what you want to do;) Try <a href="/">here</a> instead.
    </p>
+   <center style="font-size: 12px;">
+      Served for {{ peer }} from Crossbar.io node worker with PID {{ workerPid }}.
+   </center>
    <br>
 
 {% endblock %}
