--- a/crossbar/crossbar/templates/python/appname/web/index.html
+++ b/crossbar/crossbar/templates/python/appname/web/index.html
@@ -1,60 +1,36 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <h1>Votes Frontend</h1>
+      <h1>{{ appname }}</h1>
       <p>Open JavaScript console to watch output.</p>
       <script>AUTOBAHN_DEBUG = true;</script>
-      <script src="https://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz"></script>
-
-      <button onclick="vote('banana')">Banana</button>
-      <button onclick="vote('lemon')">Lemon</button>
-      <button onclick="vote('grapefruit')">Grapefruit</button>
+      <script src="autobahn.min.js"></script>
 
       <script>
-         // WebSocket (WAMP) server address
-         var wsuri;
-
-         if (document.location.origin == "file://") {
-            wsuri = "ws://127.0.0.1:8080/ws";
-         } else {
-            wsuri = (window.location.protocol === "http:" ? "ws:" : "wss:") + "//" + document.location.host + "/ws";
-         }
-
          var connection = new autobahn.Connection({
-            url: wsuri,
-            realm: 'realm1'
+            url: "ws://127.0.0.1:8080/ws",
+            realm: "{{ realm_id }}"
          });
 
          connection.onopen = function (session) {
 
-            console.log("Connected to", wsuri);
+            console.log("Connected");
 
-            session.subscribe('com.votegame.onvote', function (args) {
-               console.log("new votes for " + args[0] + " : " + args[1]);
-            });
-
-            session.call('com.votegame.get_votes').then(
-               function (votes) {
-                  console.log("Current votes:", votes);
+            session.call('com.{{ appname }}.hello').then(
+               function (res) {
+                  console.log(res);
                },
-               session.log
+               function (err) {
+                  console.log(err);
+               }
             );
          };
 
-         connection.open();
-
-         function vote(item) {
-            if (connection.session) {
-               connection.session.call('com.votegame.vote', [item]).then(
-                  function (count) {
-                     console.log("Ok, voted for " + item + " : " + count);
-                  },
-                  connection.session.log
-               );
-            } else {
-               console.log("can't vote: no connection");
-            }
+         connection.onclose = function () {
+            console.log("Connection lost", arguments);
          }
+
+         connection.open();
       </script>
    </body>
 </html>
