--- a/crossbar/crossbar/templates/hello/python/appname/web/index.html
+++ b/crossbar/crossbar/templates/hello/python/appname/web/index.html
@@ -9,7 +9,7 @@
       <script>
          var connection = new autobahn.Connection({
             url: "ws://127.0.0.1:8080/ws",
-            realm: "{{ realm_id }}"
+            realm: "{{ realm }}"
          });
 
          connection.onopen = function (session) {
