--- a/crossbar/crossbar/templates/hello/python/appname/web/index.html
+++ b/crossbar/crossbar/templates/hello/python/appname/web/index.html
@@ -13,7 +13,8 @@
             wsuri = "ws://127.0.0.1:8080/ws";
 
          } else {
-            wsuri = (window.location.protocol === "http:" ? "ws:" : "wss:") + "//" + document.location.host + "/ws";
+            wsuri = (document.location.protocol === "http:" ? "ws:" : "wss:") + "//" +
+                        document.location.host + "/ws";
          }
 
          var connection = new autobahn.Connection({
