--- a/crossbar/crossbar/templates/hello/php/web/index.html
+++ b/crossbar/crossbar/templates/hello/php/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <h1>{{ appname }}</h1>
+      <h1>Hello WAMP</h1>
       <p>Open JavaScript console to watch output.</p>
       <script>AUTOBAHN_DEBUG = true;</script>
       <script src="autobahn.min.js"></script>
