--- a/crossbar/crossbar/web/templates/cb_ws_status.html
+++ b/crossbar/crossbar/web/templates/cb_ws_status.html
@@ -3,18 +3,22 @@
 {% block content %}
 
    <p>
-      This is the <b>WebSocket Application Endpoint</b> of your <a href="http://crossbar.io">Crossbar.io</a> server.
-      Applications talk to me speaking <a href="http://wamp.ws">WAMP</a> over
-      <a href="http://tools.ietf.org/html/rfc6455">WebSocket</a> by connecting to:
+      This is a <b>WAMP-over-WebSocket</b> transport endpoint on your <a href="http://crossbar.io">Crossbar.io</a> server.
+
+      Applications talk to me speaking the <a href="https://github.com/tavendo/WAMP/blob/master/spec/basic.md#websocket-transport">WAMP-over-WebSocket</a> protocol.     
    </p>
-   <br>
+   {% if wsUri %}
+   <p>
+      Clients connect using this WebSocket URL:
+   </p>
    <center>
       <pre>{{ wsUri }}</pre>
    </center>
-   <br>
+   {% endif %}
    <p>
       If you are a human, this is likely not what you want to do;) Try <a href="/">here</a> instead.
    </p>
+   <br>
    <center style="font-size: 12px;">
       Served for {{ peer }} from Crossbar.io node worker with PID {{ workerPid }}.
    </center>
