working on schema docs web resource

--- a/crossbar/crossbar/web/templates/cb_base.html
+++ b/crossbar/crossbar/web/templates/cb_base.html
@@ -58,6 +58,7 @@
             margin: 0 auto 40px auto;
          }
       </style>
+      {% block header %}{% endblock %}
    </head>
    <body>
       <div id="content">
