working on WAMP-CRA

--- a/crossbar/crossbar/templates/authenticate/wampcradynamic/web/index.html
+++ b/crossbar/crossbar/templates/authenticate/wampcradynamic/web/index.html
@@ -12,7 +12,7 @@
       <script>
          console.log("Ok, AutobahnJS loaded", autobahn.version);
 
-         if (false) {
+         if (true) {
             // authenticate using authid "joe"
             var user = "joe";
             var key = "secret2";
