--- a/crossbar/crossbar/templates/pusher/web/index.html
+++ b/crossbar/crossbar/templates/pusher/web/index.html
@@ -3,6 +3,19 @@
    <body>
       <h1>Crossbar.io HTTP Bridge Demo</h1>
       <p>Open JavaScript console to watch output.</p>
+
+      <p>
+         Crossbar.io is configured to receive PubSub events via HTTP/POST.
+      </p>
+      <p>
+         To publish using 'curl' do
+      </p>
+      <pre>
+curl -H "Content-Type: application/json" \
+   -d '{"topic": "com.myapp.topic1", "args": ["Hello, world"]}' \
+   http://127.0.0.1:8080/push
+      </pre>
+
       <script>AUTOBAHN_DEBUG = true;</script>
       <script src="autobahn.min.js"></script>
 
