another Pi app template

--- a/crossbar/crossbar/templates/device/pi/gpio/web/index.html
+++ b/crossbar/crossbar/templates/device/pi/gpio/web/index.html
@@ -22,7 +22,7 @@
       </style>
    </head>
    <body>
-      <h1>Hello WAMP</h1>
+      <h1>RaspberryPi GPIO Demo</h1>
       <p>Open JavaScript console to watch output.</p>
 
       <div id="leds"></div><br>
