Allow DB adapter connection config from env (fixes #173 )

--- a/crossbar/crossbar/templates/pg/publisher/web/index.html
+++ b/crossbar/crossbar/templates/pg/publisher/web/index.html
@@ -21,7 +21,7 @@ SELECT pg_notify('crossbar_pubsub_event',
       <p>
          You should see the event being received in JavaScript.
       </p>
-      <script src="https://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz">
+      <script src="autobahn.min.js">
       </script>
       <script>
          var connection = new autobahn.Connection({
