show client IP:port and worker PID in 404 template

--- a/crossbar/web/templates/cb_web_404.html
+++ b/crossbar/web/templates/cb_web_404.html
@@ -20,4 +20,8 @@
       <pre>{{ directory }}</pre>
    </center>
    <br>
+   <center style="font-size: 12px;">
+      Served for {{ peer }} from Crossbar.io node worker with PID {{ workerPid }}.
+   </center>
+   <br>
 {% endblock %}
