--- a/crossbar/templates/hello/browser/web/index.html
+++ b/crossbar/templates/hello/browser/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--###############################################################################
 ##
-##  Copyright (C) 2014-15, Tavendo GmbH and/or collaborators. All rights reserved.
+##  Copyright (c) Crossbar.io Technologies GmbH and/or collaborators. All rights reserved.
 ## 
 ##  Redistribution and use in source and binary forms, with or without
 ##  modification, are permitted provided that the following conditions are met:
