static config for payload validation

--- a/crossbar/webservice/templates/wamp_catalog_home.html
+++ b/crossbar/webservice/templates/wamp_catalog_home.html
@@ -7,9 +7,9 @@
 <h1>Home</h1>
 <p>(created {{ created }})</p>
 
-<h2>Schemata</h2>
+<h2>Schemas</h2>
 <table>
-{% for schema in repo.schemata.values() %}
+{% for schema in repo.schemas.values() %}
     <tr>
         <td>{{ schema.file_name }}</td>
     </tr>
